test/typeCheckTest/fail/test16.ic
class BadMethodCall {
	void main (string [] args) {
		int n = this.missingMethod();
	}
}